[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/basic_font_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ui/EndCombatScene.gd" type="Script" id=2]

[node name="EndCombatScene" type="Node"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ResultLabel" type="Label" parent="Control"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ExitBtn" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -37.0
margin_right = 20.0
margin_bottom = -16.0
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 249.0
margin_right = -10.0
margin_bottom = -75.0

[node name="Stat1" type="Control" parent="Control/VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Stat1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 52.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Defensa"

[node name="StatPoint" type="Label" parent="Control/VBoxContainer/Stat1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -7.0
margin_right = 172.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Button" type="Button" parent="Control/VBoxContainer/Stat1"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_bottom = 10.0
text = "+"

[node name="Stat2" type="Control" parent="Control/VBoxContainer"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Stat2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 52.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Evasi√≥n"

[node name="StatPoint" type="Label" parent="Control/VBoxContainer/Stat2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -7.0
margin_right = 172.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Button" type="Button" parent="Control/VBoxContainer/Stat2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_bottom = 10.0
text = "+"

[node name="Stat3" type="Control" parent="Control/VBoxContainer"]
margin_top = 108.0
margin_right = 300.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Stat3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 52.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Intelecto"

[node name="StatPoint" type="Label" parent="Control/VBoxContainer/Stat3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -7.0
margin_right = 172.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Button" type="Button" parent="Control/VBoxContainer/Stat3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_bottom = 10.0
text = "+"

[node name="Stat4" type="Control" parent="Control/VBoxContainer"]
margin_top = 162.0
margin_right = 300.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Stat4"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 52.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Magia"

[node name="StatPoint" type="Label" parent="Control/VBoxContainer/Stat4"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -7.0
margin_right = 172.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Button" type="Button" parent="Control/VBoxContainer/Stat4"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_bottom = 10.0
text = "+"

[node name="Stat5" type="Control" parent="Control/VBoxContainer"]
margin_top = 216.0
margin_right = 300.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Stat5"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 52.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Velocidad"

[node name="StatPoint" type="Label" parent="Control/VBoxContainer/Stat5"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -7.0
margin_right = 172.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Button" type="Button" parent="Control/VBoxContainer/Stat5"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_bottom = 10.0
text = "+"

[node name="Stat6" type="Control" parent="Control/VBoxContainer"]
margin_top = 270.0
margin_right = 300.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 50 )

[node name="Label" type="Label" parent="Control/VBoxContainer/Stat6"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 52.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fuerza"

[node name="StatPoint" type="Label" parent="Control/VBoxContainer/Stat6"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 120.0
margin_top = -7.0
margin_right = 172.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Button" type="Button" parent="Control/VBoxContainer/Stat6"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -10.0
margin_bottom = 10.0
text = "+"
